add application icon support for Linux